[package]
name = "klustered-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.74.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
execute = "0.2.11"
which = "4.2.5"
serde_json = "1.0.83"
serde = "1.0.143"
anyhow = "1.0.61"
serde_derive = "1.0.143"
